# irma

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  irma.sln  irma.vcxproj  irma.vcxproj.filters
cmake/: FindLuaJIT.cmake
lua/: lua.vcxproj
projects/example/: functions.glsl  main.glsl  project.txt  raymarching.glsl  scene.glsl  shader.glsl  shapes.glsl  test.lua  uniforms.glsl
src/: FileUtils.cpp  FileUtils.h  GLUtils.cpp  GLUtils.h  LuaFunctions.cpp  LuaFunctions.h  LuaScript.cpp  LuaScript.h  Player.cpp  Player.h  Project.cpp  Project.h  Quad.cpp  Quad.h  Shader.cpp  Shader.h  main.cpp
